Change project to Java 11
Checkstyle was not recognising newer commands.